<resources>
    <string name="app_name">أخبار منشأة سلطان</string>
    <string name="startingText">مرحباً بكم في قرية منشأة سلطان</string>
    <string name="startingTextDescription">إعرف اخبار قرية منشأة سلطان من خلال تصفحك للتطبيق</string>
    <string name="start">إنطلق</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="let_s_log_in">Let\'s Log In</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="forgotpassword">ForgotPassword</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="let_s_register">Let\'s Register</string>
    <string name="faramawy">Faramawy.</string>
    <string name="first_name">First Name\t</string>
    <string name="last_name">Last Name</string>
    <string name="admin">مسؤول</string>
    <string name="user">مستخدم</string>
    <string name="rightAddress2">أخبار قرية منشأة سلطان</string>
    <string name="subTitleName2">إذا كنت مستخدم لمعرفة اخبار قريتك عليك المتابعة باستخدام زر <font color="#040D12"><b>مُستخدم</b></font> وإذا كنت مسؤول عن ادارة اخبار القرية عليك المتابعة باستخدام زر <font color="#040D12"><b>مسؤول</b></font></string>
    <string name="admin_code_decr">قم بإدخال الكود الذي تم إرسالة لك من قِبل <font color="#740c1c"><b>مُطوري</b></font> التطبيق.</string>
    <string name="admin_code_title">المُتابعة كـ مسؤول</string>
    <string name="confirm">تأكيد</string>
    <string name="cancel">إلغاء</string>
    <string name="try_again_action">حاول مرة اخري</string>
    <string name="wrong_code">الكود خطأ</string>
    <string name="welcom_message_admin">مرحباً بك استاذ</string>
    <string name="important">عاجل | </string>



    <string name="emoji_important">\\uD83D\\uDEA8</string>
    <string name="textdescription1">هذه الصفحة خاصة بالمسؤولين برجاء التوجه لمطوري التطبيق</string>
    <string name="aboutDescriptionMS">"منشأة سلطان إحدى قرى مركز منوف التابع لمحافظة المنوفية بجمهورية مصر العربية، وتحدها قرى تتا وغمرين ودبركي وشبرا باص ودكما والعراقية، ومن أعلامها محمد محمود السطوحي شيخ مشايخ الطرق الصوفية الأسبق , قرية منشأة سلطان من القرى القديمة، حيث وردت باسم إلواط , في أعمال المنوفية ضمن قري الروك الصلاحي التي أحصاها ابن مماتي في كتاب قوانين الدواوين , كما  كما وردت باسم إلواط في اعمال المنوفية ضمن قري الروك الناصري التي أحصاها ابن الجيعان في كتاب التحفة السنية بأسماء البلاد المصرية , بلغ عدد سكان منشأة سلطان 20,201 نسمة، منهم 10,318 رجل و9,883 إمرأة، حسب الإحصاء الرسمي لعام 2006 "</string>
    <string name="dev_name_two">م/ محمد سمير بصارة</string>
    <string name="to_log_out">to log out</string>
    <string name="time_publish_ads">" تاريخ نشر الاعلان : %1$s"</string>
</resources>