<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <TextView
        android:id="@+id/tvAdminCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:fontFamily="@font/base_font_cairo"
        android:text="@string/admin_code_title"
        android:textDirection="rtl"
        android:textColor="@color/title"
        android:textSize="@dimen/_15sdp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:id="@+id/tvAdminCodeDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:fontFamily="@font/base_font_cairo"
        android:text="@string/admin_code_decr"
        android:textColor="@color/black"
        android:textSize="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="@id/tvAdminCode"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAdminCode"/>

    <EditText
        android:id="@+id/edAdminCodeEntry"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:fontFamily="@font/base_font_cairo"
        app:layout_constraintEnd_toEndOf="@+id/tvAdminCodeDescription"
        app:layout_constraintStart_toStartOf="@+id/tvAdminCodeDescription"
        app:layout_constraintTop_toBottomOf="@id/tvAdminCodeDescription"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/edAdminCodeEntry"
        app:layout_constraintStart_toStartOf="@id/edAdminCodeEntry"
        app:layout_constraintTop_toBottomOf="@id/edAdminCodeEntry"
        android:orientation="horizontal">
        <com.github.leandroborgesferreira.loadingbutton.customViews.CircularProgressButton
            android:id="@+id/buttonCancelAdminCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_weight="1"
            android:fontFamily="@font/btn_font_cairo_black"
            android:background="@drawable/white_background"
            android:text="@string/cancel"
            app:spinning_bar_color="@color/black"
            android:textAllCaps="false"/>
        <com.github.leandroborgesferreira.loadingbutton.customViews.CircularProgressButton
            android:id="@+id/buttonConfirmAdminCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_weight="1"
            android:fontFamily="@font/btn_font_cairo_black"
            android:background="@drawable/red_background"
            android:textColor="@color/white"
            android:text="@string/confirm"
            app:spinning_bar_color="@color/white"
            android:textAllCaps="false"/>
    </LinearLayout>





</androidx.constraintlayout.widget.ConstraintLayout>