<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/image_background"
        >

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animationView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/tvAddressForNewsAppName"
            app:layout_constraintEnd_toEndOf="@id/guidelineEllipseRight"
            app:layout_constraintStart_toStartOf="@id/guidelineEllipseLeft"
            app:layout_constraintTop_toTopOf="@id/ellipse"
            app:lottie_autoPlay="true"
            android:layout_marginBottom="@dimen/_29sdp"
            app:lottie_rawRes="@raw/xe"
            app:lottie_loop="true"
             />


        <ImageView
            android:id="@+id/ellipse"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="@id/guidelineEllipseBottom"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="@id/guidelineEllipseRight"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/guidelineEllipseLeft"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvAddressForNewsAppName"
            style="@style/header_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/tvRightAddressMargin"
            android:gravity="center"
            android:text="@string/startingText"
            android:textAlignment="center"
            android:lineSpacingMultiplier="0.7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/guideLineLeftTexture"
            app:layout_constraintVertical_bias="0.566" />

        <com.github.leandroborgesferreira.loadingbutton.customViews.CircularProgressButton
            android:id="@+id/buttonStartIntro"
            style="@style/redButtonStyle"
            android:layout_width="@dimen/smallButtonWidth"
            android:layout_height="@dimen/smallButtonHeight"
            android:text="@string/start"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/tvQualityForNewsApp"
            app:layout_constraintStart_toStartOf="@id/tvQualityForNewsApp"
            app:layout_constraintTop_toBottomOf="@id/tvQualityForNewsApp"
            app:spinning_bar_color="@color/white" />


        <TextView
            android:id="@+id/tvQualityForNewsApp"
            style="@style/header_3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/startingTextDescription"
            android:lineSpacingMultiplier="0.7"
            android:textSize="@dimen/_14sdp"
            android:textColor="@color/g_gray700"
            android:layout_margin="@dimen/_14sdp"
            app:layout_constraintEnd_toEndOf="@id/tvAddressForNewsAppName"
            app:layout_constraintStart_toStartOf="@id/tvAddressForNewsAppName"
            app:layout_constraintTop_toBottomOf="@id/tvAddressForNewsAppName" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideLineLeftTexture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.33" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineEllipseLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.15" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineEllipseRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.85" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineEllipseTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="139dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineEllipseBottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.52" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>